# pdf-extractext

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/api/: routes.py
app/core/: config.py
app/db/: connection.py
app/models/: document.py
app/services/: document_service.py  pdf_service.py
tests/: test_document_service.py  test_pdf_service.py
