[project]
name = "pdf-extractext"
version = "0.1.0"
description = "Lee pdf y resume con IA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.9",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "motor>=3.4.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
